--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "1.2.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "ionic:build": "vite build",
+    "dev": "npx serve .",
+    "build": "mkdir -p dist && cp -r * dist/ 2>/dev/null || xcopy /E /I * dist",
+    "preview": "npx serve dist",
+    "ionic:build": "npm run build",
     "ionic:cap:build": "npx cap add android && npx cap copy android"
   },
   "dependencies": {
@@ -27,11 +27,9 @@
     "@capacitor/android": "latest"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
     "tailwindcss": "^3.4.4",
     "postcss": "^8.4.38",
     "autoprefixer": "^10.4.19",
-    "vite": "^5.0.0",
     "vercel": "^39.0.0"
   }
 }
