--- a/package.json
+++ b/package.json
@@ -5,21 +5,18 @@
   "type": "module",
   "scripts": {
     "dev": "npx serve .",
-    "build": "npx shx rm -rf dist && npx shx mkdir -p dist && npx shx cp -r . dist && npx shx rm -rf dist/dist",
+    "build": "npx shx rm -rf dist && npx shx mkdir -p dist && npx shx cp index.html health.html swing.html insight.html vr-world.html videos.html notifications.html dist/ 2>/dev/null || npx shx cp -r . dist && npx shx rm -rf dist/dist",
     "preview": "npx serve dist",
     "ionic:build": "npm run build",
     "ionic:cap:build": "npx cap add android && npx cap copy android"
   },
   "dependencies": {
     "@knocklabs/node": "^0.6.10",
-    "@novu/node": "^2.0.0",
     "formidable": "^3.5.1",
     "@neondatabase/serverless": "^0.10.4",
     "@vercel/blob": "^0.27.0",
-    "@mixedbread-ai/sdk": "^1.0.0",
     "@google/genai": "^0.15.0",
     "@supabase/supabase-js": "^2.39.3",
-    "@vercel/postgres": "^0.9.0",
     "node-fetch": "^3.3.0",
     "pg": "^8.11.0",
     "@capacitor/core": "latest",
