--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
   "name": "raqqa-app-pro",
   "private": true,
-  "version": "1.2.0",
+  "version": "1.3.0",
   "type": "module",
   "scripts": {
     "dev": "npx serve .",
-    "build": "npx shx rm -rf dist && npx shx mkdir -p dist && npx shx cp index.html health.html swing.html insight.html vr-world.html videos.html notifications.html dist/ 2>/dev/null || npx shx cp -r . dist && npx shx rm -rf dist/dist",
-    "preview": "npx serve dist",
-    "ionic:build": "npm run build",
-    "ionic:cap:build": "npx cap add android && npx cap copy android"
+    "build": "echo 'Skipping manual copy...'",
+    "preview": "npx serve ."
   },
   "dependencies": {
     "@knocklabs/node": "^0.6.10",
@@ -19,15 +17,6 @@
     "@supabase/supabase-js": "^2.39.3",
     "node-fetch": "^3.3.0",
     "pg": "^8.11.0",
-    "@capacitor/core": "latest",
-    "@capacitor/cli": "latest",
-    "@capacitor/android": "latest",
     "shx": "^0.3.4"
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.4.4",
-    "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19",
-    "vercel": "^39.0.0"
   }
 }
