--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "npx serve .",
-    "build": "echo 'Skipping manual copy...'",
+    "build": "echo 'Vercel: Deployment in progress...'",
     "preview": "npx serve ."
   },
   "dependencies": {
@@ -16,7 +16,9 @@
     "@google/genai": "^0.15.0",
     "@supabase/supabase-js": "^2.39.3",
     "node-fetch": "^3.3.0",
-    "pg": "^8.11.0",
-    "shx": "^0.3.4"
+    "pg": "^8.11.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
