--- a/package.json
+++ b/package.json
@@ -1,24 +1,20 @@
 {
-  "name": "raqqa-app-pro",
+  "name": "raqqa-react-app",
   "private": true,
-  "version": "1.3.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npx serve .",
-    "build": "echo 'Build optimization: skipping dist creation'",
-    "preview": "npx serve ."
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@knocklabs/node": "^0.6.10",
-    "formidable": "^3.5.1",
-    "@neondatabase/serverless": "^0.10.4",
-    "@vercel/blob": "^0.27.0",
-    "@google/genai": "^0.15.0",
-    "@supabase/supabase-js": "^2.39.3",
-    "node-fetch": "^3.3.0",
-    "pg": "^8.11.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
   },
-  "engines": {
-    "node": ">=18.0.0"
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
+    "vite": "^5.0.0"
   }
 }
