--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "react-router-dom": "^6.22.0",
+    "sweetalert2": "^11.10.5",
+    "lucide-react": "^0.344.0",
+    "framer-motion": "^11.0.8",
+    "axios": "^1.6.7",
+    "clsx": "^2.1.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
