--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "framer-motion": "^11.0.8",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "@capacitor/core": "^5.7.0",
+    "@capacitor/android": "^5.7.0",
+    "@capacitor/app": "^5.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
+    "@capacitor/cli": "^5.7.0",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
