--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -1,9 +1,11 @@
 {
   "appId": "com.roqa.app",
   "appName": "raqqa",
-  "webDir": "dist_web", 
+  "webDir": "dist",
   "bundledWebRuntime": false,
   "server": {
+    "url": "https://raqqa-v6cd.vercel.app",
+    "cleartext": true,
     "androidScheme": "https"
   }
 }
