--- a/capacitor.config.json
+++ b/capacitor.config.json
@@ -4,6 +4,7 @@
   "webDir": "dist_web",
   "bundledWebRuntime": false,
   "server": {
-    "androidScheme": "https"
+    "androidScheme": "https",
+    "cleartext": true 
   }
 }
