--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -3,102 +3,111 @@ name: Roqa Final Professional Build Fixed
 on:
   push:
     branches:
-      - main  # تفعيل البناء التلقائي عند أي تحديث في فرع main
-  workflow_dispatch: # الحفاظ على خيار التشغيل اليدوي أيضاً من GitHub Actions
+      - [cite_start]main  # تفعيل البناء التلقائي عند أي تحديث في فرع main [cite: 31]
+  [cite_start]workflow_dispatch: # الحفاظ على خيار التشغيل اليدوي أيضاً [cite: 31]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: 1. جلب الكود
-        uses: actions/checkout@v4
+        [cite_start]uses: actions/checkout@v4 [cite: 31]
 
       - name: 2. إعداد البيئة (Node 22 & Java 17)
-        # تم تعديل Java إلى 17 ليتوافق مع Gradle 8.0.2 ويحل خطأ Unsupported class file major version 65
-        uses: actions/setup-java@v4
+        [cite_start]uses: actions/setup-java@v4 [cite: 31]
         with:
-          java-version: '17' 
+          [cite_start]java-version: '17' # ليتوافق مع Gradle 8.0.2 [cite: 32]
           distribution: 'temurin'
 
       - name: إعداد Node.js
-        uses: actions/setup-node@v4
+        [cite_start]uses: actions/setup-node@v4 [cite: 32]
         with:
           node-version: '22'
 
       - name: 3. التنظيف وعزل الكود
         run: |
-          rm -rf android node_modules 
-          npm install --legacy-peer-deps
-          mkdir -p dist_web
-          rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web
-          npm run build --if-present
+          rm -rf android node_modules [cite: 33]
+          npm install --legacy-peer-deps [cite: 33]
+          mkdir -p dist_web [cite: 33]
+          rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web [cite: 34]
+          npm run build --if-present [cite: 34]
 
       - name: 4. إضافة منصة أندرويد وتحديثها
         run: |
-          npx cap config set webDir dist_web
-          npx cap add android
-          npx cap sync android
+          npx cap config set webDir dist_web [cite: 35]
+          npx cap add android [cite: 35]
+          npx cap sync android [cite: 35]
 
-      - name: 5. إضافة صلاحيات الإنترنت والبيانات غير المشفرة
+      - name: 5. ضبط إعدادات أمن الشبكة والصلاحيات
         run: |
-          # إضافة تصريح الإنترنت للمانيفست لضمان عمل الـ APIs الخارجية 
+          # 1. إنشاء مجلد xml وملف إعدادات أمن الشبكة
+          mkdir -p android/app/src/main/res/xml
+          echo '<?xml version="1.0" encoding="utf-8"?>
+          <network-security-config>
+              <domain-config cleartextTrafficPermitted="true">
+                  <domain includeSubdomains="true">raqqa-v6cd.vercel.app</domain>
+              </domain-config>
+              <base-config cleartextTrafficPermitted="true">
+                  <trust-anchors>
+                      <certificates src="system" />
+                      <certificates src="user" />
+                  </trust-anchors>
+              </base-config>
+          </network-security-config>' > android/app/src/main/res/xml/network_security_config.xml
+
+          # 2. إضافة تصريح الإنترنت للمانيفست 
           sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml
           
-          # تفعيل Cleartext Traffic للسماح بالاتصال بـ Neon/Vercel كما في المتصفح 
-          sed -i 's/<application/<application android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml
+          # 3. تحديث وسم application ليشمل ملف أمن الشبكة و Cleartext 
+          sed -i 's/<application/<application android:networkSecurityConfig="@xml\/network_security_config" android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml
 
       - name: 6. ضبط الأيقونات وفيديو شاشة البداية
         run: |
-          npm install @capacitor/assets --save-dev
-          mkdir -p android/app/src/main/res/raw
-          if [ -f "resources/splash_video.mp4" ];
-          then
+          npm install @capacitor/assets --save-dev [cite: 37]
+          mkdir -p android/app/src/main/res/raw [cite: 37]
+          if [ -f "resources/splash_video.mp4" ]; then [cite: 37, 38]
             cp resources/splash_video.mp4 android/app/src/main/res/raw/
-            echo "✅ تم نقل الفيديو بنجاح"
+            echo "✅ تم نقل الفيديو بنجاح" [cite: 38]
           else
-            echo "⚠️ تحذير: لم يتم العثور على resources/splash_video.mp4"
+            echo "⚠️ تحذير: لم يتم العثور على الفيديو" [cite: 38]
           fi
-          npx capacitor-assets generate --android
+          npx capacitor-assets generate --android [cite: 38]
 
       - name: 7. بناء ملفات الـ APK و AAB
         run: |
-          cd android
-          chmod +x gradlew
-          ./gradlew assembleRelease
-          ./gradlew bundleRelease
+          cd android [cite: 39]
+          chmod +x gradlew [cite: 39]
+          ./gradlew assembleRelease [cite: 39]
+          ./gradlew bundleRelease [cite: 39]
 
       - name: 8. إنشاء ملف التوقيع وتوقيع الملفات
         run: |
-          # إنشاء مفتاح توقيع جديد
           keytool -genkey -v -keystore release_key.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
             -storepass "roqa_password_2026" -keypass "roqa_password_2026" \
-            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG"
+            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG" [cite: 40]
           
-          # تحديد مسارات الملفات الناتجة
-          APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1)
-          AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1)
+          [cite_start]APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1) [cite: 41]
+          [cite_start]AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1) [cite: 41]
 
-          # توقيع ملف APK
           /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks \
             --ks-key-alias "roqa_alias" \
             --ks-pass pass:"roqa_password_2026" \
             --key-pass pass:"roqa_password_2026" \
             --out Roqa-Final-Signed.apk \
-            "$APK_FILE"
+            [cite_start]"$APK_FILE" [cite: 41, 42]
 
-          # توقيع ملف AAB
           jarsigner -keystore release_key.jks \
             -storepass "roqa_password_2026" \
             -keypass "roqa_password_2026" \
-            "$AAB_FILE" roqa_alias
+            [cite_start]"$AAB_FILE" roqa_alias [cite: 42]
 
-          cp "$AAB_FILE" Roqa-Final-Signed.aab
+          [cite_start]cp "$AAB_FILE" Roqa-Final-Signed.aab [cite: 42]
 
       - name: 9. رفع الملفات الموقعة وملف التوقيع
-        uses: actions/upload-artifact@v4
+        [cite_start]uses: actions/upload-artifact@v4 [cite: 43]
         with:
-          name: Roqa-Full-Package-v${{ github.run_number }}
+          [cite_start]name: Roqa-Full-Package-v${{ github.run_number }} [cite: 43]
           path: |
             Roqa-Final-Signed.apk
             Roqa-Final-Signed.aab
-            release_key.jks
+            release_key.jks [cite: 44]
