--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -1,46 +1,47 @@
-name: Roqa Final Professional Build Fixed
+[cite_start]name: Roqa Final Professional Build Fixed [cite: 1]
 
 on:
   push:
     branches:
-      - [cite_start]main  # تفعيل البناء التلقائي عند أي تحديث في فرع main [cite: 31]
-  [cite_start]workflow_dispatch: # الحفاظ على خيار التشغيل اليدوي أيضاً [cite: 31]
+      - [cite_start]main  # تفعيل البناء التلقائي عند أي تحديث في فرع main [cite: 1]
+  [cite_start]workflow_dispatch: # الحفاظ على خيار التشغيل اليدوي أيضاً من GitHub Actions [cite: 1]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - name: 1. جلب الكود
-        [cite_start]uses: actions/checkout@v4 [cite: 31]
+        [cite_start]uses: actions/checkout@v4 [cite: 1]
 
       - name: 2. إعداد البيئة (Node 22 & Java 17)
-        [cite_start]uses: actions/setup-java@v4 [cite: 31]
+        # [cite_start]تم تعديل Java إلى 17 ليتوافق مع Gradle 8.0.2 ويحل خطأ Unsupported class file major version 65 [cite: 2]
+        uses: actions/setup-java@v4
         with:
-          [cite_start]java-version: '17' # ليتوافق مع Gradle 8.0.2 [cite: 32]
-          distribution: 'temurin'
+          [cite_start]java-version: '17' [cite: 2]
+          [cite_start]distribution: 'temurin' [cite: 2]
 
       - name: إعداد Node.js
-        [cite_start]uses: actions/setup-node@v4 [cite: 32]
+        [cite_start]uses: actions/setup-node@v4 [cite: 2]
         with:
-          node-version: '22'
+          [cite_start]node-version: '22' [cite: 2]
 
       - name: 3. التنظيف وعزل الكود
         run: |
-          rm -rf android node_modules [cite: 33]
-          npm install --legacy-peer-deps [cite: 33]
-          mkdir -p dist_web [cite: 33]
-          rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web [cite: 34]
-          npm run build --if-present [cite: 34]
+          [cite_start]rm -rf android node_modules [cite: 3]
+          [cite_start]npm install --legacy-peer-deps [cite: 3]
+          [cite_start]mkdir -p dist_web [cite: 3]
+          [cite_start]rsync -av . dist_web/ --exclude android --exclude "*.txt" --exclude node_modules --exclude .git --exclude dist_web [cite: 4]
+          [cite_start]npm run build --if-present [cite: 4]
 
       - name: 4. إضافة منصة أندرويد وتحديثها
         run: |
-          npx cap config set webDir dist_web [cite: 35]
-          npx cap add android [cite: 35]
-          npx cap sync android [cite: 35]
+          [cite_start]npx cap config set webDir dist_web [cite: 5]
+          [cite_start]npx cap add android [cite: 5]
+          [cite_start]npx cap sync android [cite: 5]
 
       - name: 5. ضبط إعدادات أمن الشبكة والصلاحيات
         run: |
-          # 1. إنشاء مجلد xml وملف إعدادات أمن الشبكة
+          # 1. إنشاء مجلد xml وملف إعدادات أمن الشبكة برمجياً
           mkdir -p android/app/src/main/res/xml
           echo '<?xml version="1.0" encoding="utf-8"?>
           <network-security-config>
@@ -55,59 +56,64 @@ jobs:
               </base-config>
           </network-security-config>' > android/app/src/main/res/xml/network_security_config.xml
 
-          # 2. إضافة تصريح الإنترنت للمانيفست 
+          # [cite_start]2. إضافة تصريح الإنترنت للمانيفست لضمان عمل الـ APIs الخارجية [cite: 6]
           sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml
           
-          # 3. تحديث وسم application ليشمل ملف أمن الشبكة و Cleartext 
+          # [cite_start]3. الربط الجوهري: تحديث وسم application ليشمل ملف أمن الشبكة وتفعيل الترافيك غير المشفر [cite: 6]
           sed -i 's/<application/<application android:networkSecurityConfig="@xml\/network_security_config" android:usesCleartextTraffic="true"/' android/app/src/main/AndroidManifest.xml
 
       - name: 6. ضبط الأيقونات وفيديو شاشة البداية
         run: |
-          npm install @capacitor/assets --save-dev [cite: 37]
-          mkdir -p android/app/src/main/res/raw [cite: 37]
-          if [ -f "resources/splash_video.mp4" ]; then [cite: 37, 38]
-            cp resources/splash_video.mp4 android/app/src/main/res/raw/
-            echo "✅ تم نقل الفيديو بنجاح" [cite: 38]
-          else
-            echo "⚠️ تحذير: لم يتم العثور على الفيديو" [cite: 38]
-          fi
-          npx capacitor-assets generate --android [cite: 38]
+          [cite_start]npm install @capacitor/assets --save-dev [cite: 7]
+          [cite_start]mkdir -p android/app/src/main/res/raw [cite: 7]
+          [cite_start]if [ -f "resources/splash_video.mp4" ]; [cite: 7]
+          [cite_start]then [cite: 8]
+            [cite_start]cp resources/splash_video.mp4 android/app/src/main/res/raw/ [cite: 8]
+            [cite_start]echo "✅ تم نقل الفيديو بنجاح" [cite: 8]
+          [cite_start]else [cite: 8]
+            [cite_start]echo "⚠️ تحذير: لم يتم العثور على resources/splash_video.mp4" [cite: 8]
+          [cite_start]fi [cite: 8]
+          [cite_start]npx capacitor-assets generate --android [cite: 8]
 
       - name: 7. بناء ملفات الـ APK و AAB
         run: |
-          cd android [cite: 39]
-          chmod +x gradlew [cite: 39]
-          ./gradlew assembleRelease [cite: 39]
-          ./gradlew bundleRelease [cite: 39]
+          [cite_start]cd android [cite: 9]
+          [cite_start]chmod +x gradlew [cite: 9]
+          [cite_start]./gradlew assembleRelease [cite: 9]
+          [cite_start]./gradlew bundleRelease [cite: 9]
 
       - name: 8. إنشاء ملف التوقيع وتوقيع الملفات
         run: |
+          # [cite_start]إنشاء مفتاح توقيع جديد [cite: 10]
           keytool -genkey -v -keystore release_key.jks -alias roqa_alias -keyalg RSA -keysize 2048 -validity 10000 \
             -storepass "roqa_password_2026" -keypass "roqa_password_2026" \
-            -dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG" [cite: 40]
+            [cite_start]-dname "CN=RoqaApp, OU=Dev, O=Roqa, L=Cairo, S=Egypt, C=EG" [cite: 10]
           
-          [cite_start]APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1) [cite: 41]
-          [cite_start]AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1) [cite: 41]
+          # [cite_start]تحديد مسارات الملفات الناتجة [cite: 10]
+          [cite_start]APK_FILE=$(find android/app/build/outputs/apk/release/ -name "*.apk" | head -n 1) [cite: 11]
+          [cite_start]AAB_FILE=$(find android/app/build/outputs/bundle/release/ -name "*.aab" | head -n 1) [cite: 11]
 
+          # [cite_start]توقيع ملف APK [cite: 11]
           /usr/local/lib/android/sdk/build-tools/34.0.0/apksigner sign --ks release_key.jks \
             --ks-key-alias "roqa_alias" \
             --ks-pass pass:"roqa_password_2026" \
             --key-pass pass:"roqa_password_2026" \
             --out Roqa-Final-Signed.apk \
-            [cite_start]"$APK_FILE" [cite: 41, 42]
+            [cite_start]"$APK_FILE" [cite: 12]
 
+          # [cite_start]توقيع ملف AAB [cite: 12]
           jarsigner -keystore release_key.jks \
             -storepass "roqa_password_2026" \
             -keypass "roqa_password_2026" \
-            [cite_start]"$AAB_FILE" roqa_alias [cite: 42]
+            [cite_start]"$AAB_FILE" roqa_alias [cite: 12]
 
-          [cite_start]cp "$AAB_FILE" Roqa-Final-Signed.aab [cite: 42]
+          [cite_start]cp "$AAB_FILE" Roqa-Final-Signed.aab [cite: 12]
 
       - name: 9. رفع الملفات الموقعة وملف التوقيع
-        [cite_start]uses: actions/upload-artifact@v4 [cite: 43]
+        [cite_start]uses: actions/upload-artifact@v4 [cite: 13]
         with:
-          [cite_start]name: Roqa-Full-Package-v${{ github.run_number }} [cite: 43]
+          [cite_start]name: Roqa-Full-Package-v${{ github.run_number }} [cite: 13]
           path: |
-            Roqa-Final-Signed.apk
-            Roqa-Final-Signed.aab
-            release_key.jks [cite: 44]
+            [cite_start]Roqa-Final-Signed.apk [cite: 14]
+            [cite_start]Roqa-Final-Signed.aab [cite: 14]
+            [cite_start]release_key.jks [cite: 14]
