--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "tailwind-merge": "^2.2.1",
     "@capacitor/core": "^5.7.0",
     "@capacitor/android": "^5.7.0",
-    "@capacitor/app": "^5.0.7",
-    "@capacitor/http": "^5.7.0"
+    "@capacitor/app": "^5.0.7"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
