--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tailwind-merge": "^2.2.1",
     "@capacitor/core": "^5.7.0",
     "@capacitor/android": "^5.7.0",
-    "@capacitor/app": "^5.0.7"
+    "@capacitor/app": "^5.0.7",
+    "@vercel/postgres": "^0.10.0" 
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
