--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1",
-    "@capacitor/core": "^5.7.0",
-    "@capacitor/android": "^5.7.0",
+    "@capacitor/core": "^6.0.0",
+    "@capacitor/android": "^6.0.0",
     "@capacitor/app": "^5.0.7",
+    "@capacitor/share": "^6.0.0",
     "@vercel/postgres": "^0.10.0",
     "@vercel/blob": "^0.23.4",
     "@neondatabase/serverless": "^0.9.4",
