--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-name": "raqqa-react-app",
+{
+  "name": "raqqa-react-app",
   "private": true,
   "version": "1.0.0",
   "type": "module",
@@ -17,10 +18,10 @@ name": "raqqa-react-app",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1",
-    "@capacitor/core": "^6.0.0",
-    "@capacitor/android": "^6.0.0",
-    "@capacitor/app": "^5.0.7",
-    "@capacitor/share": "^6.0.0",
+    "@capacitor/core": "^6.2.1",
+    "@capacitor/android": "^6.2.1",
+    "@capacitor/app": "^6.0.0",
+    "@capacitor/share": "^6.0.2",
     "@vercel/postgres": "^0.10.0",
     "@vercel/blob": "^0.23.4",
     "@neondatabase/serverless": "^0.9.4",
@@ -29,7 +30,7 @@ name": "raqqa-react-app",
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
-    "@capacitor/cli": "^5.7.0",
+    "@capacitor/cli": "^6.2.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
@@ -37,4 +38,3 @@ name": "raqqa-react-app",
     "terser": "^5.27.0"
   }
 }
-
