--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@capacitor/android": "^6.2.1",
     "@capacitor/app": "^6.0.0",
     "@capacitor/share": "^6.0.2",
+    "@capacitor/camera": "^6.0.0",
+    "@capacitor/filesystem": "^6.0.0",
+    "@capacitor/permissions": "^6.0.0",
     "@vercel/postgres": "^0.10.0",
     "@vercel/blob": "^0.23.4",
     "@neondatabase/serverless": "^0.9.4",
