--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "private": true,
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build --outDir dist_web",
+    "preview": "vite preview"
+  },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,7 +24,6 @@
     "@capacitor/share": "^6.0.2",
     "@capacitor/camera": "^6.0.2",
     "@capacitor/filesystem": "^6.0.0",
-    "@capacitor-community/voice-recorder": "^6.0.0",
     "@vercel/postgres": "^0.10.0",
     "@vercel/blob": "^0.23.4",
     "@neondatabase/serverless": "^0.9.4",
