--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/share": "^6.0.2",
     "@capacitor/camera": "^6.0.2",
     "@capacitor/filesystem": "^6.0.0",
+    "@capacitor-community/voice-recorder": "^6.0.0",
     "@vercel/postgres": "^0.10.0",
     "@vercel/blob": "^0.23.4",
     "@neondatabase/serverless": "^0.9.4",
