--- a/package.json
+++ b/package.json
@@ -41,6 +41,13 @@
     "terser": "^5.27.0"
   },
   "overrides": {
-    "@capacitor/core": "$@capacitor/core"
+    "capacitor-voice-recorder": {
+      "@capacitor/core": "$@capacitor/core"
+    }
+  },
+  "peerDependencyMeta": {
+    "capacitor-voice-recorder": {
+      "optional": true
+    }
   }
 }
