--- a/package.json
+++ b/package.json
@@ -18,13 +18,13 @@
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
     "tailwind-merge": "^2.2.1",
-    "@capacitor/core": "^6.2.1",
-    "@capacitor/android": "^6.2.1",
-    "@capacitor/app": "^6.0.0",
-    "@capacitor/share": "^6.0.2",
-    "@capacitor/camera": "^6.0.2",
-    "@capacitor/filesystem": "^6.0.0",
-    "capacitor-voice-recorder": "^6.0.0",
+    "@capacitor/core": "6.2.1",
+    "@capacitor/android": "6.2.1",
+    "@capacitor/app": "6.0.3",
+    "@capacitor/share": "6.0.2",
+    "@capacitor/camera": "6.0.2",
+    "@capacitor/filesystem": "6.0.4",
+    "capacitor-voice-recorder": "5.0.0",
     "@vercel/postgres": "^0.10.0",
     "@vercel/blob": "^0.23.4",
     "@neondatabase/serverless": "^0.9.4",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.0",
-    "@capacitor/cli": "^6.2.1",
+    "@capacitor/cli": "6.2.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
@@ -42,12 +42,9 @@
   },
   "overrides": {
     "capacitor-voice-recorder": {
-      "@capacitor/core": "$@capacitor/core"
-    }
-  },
-  "peerDependencyMeta": {
-    "capacitor-voice-recorder": {
-      "optional": true
+      "capacitor-blob-writer": "1.1.19",
+      "@capacitor/core": "6.2.1",
+      "@capacitor/filesystem": "6.0.4"
     }
   }
 }
