--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -1,4 +1,4 @@
-[cite_start]name: Roqa Final Professional Build Fixed [cite: 1]
+name: Roqa Final Professional Build Fixed
 
 on:
   push:
@@ -14,15 +14,15 @@ jobs:
         [cite_start]uses: actions/checkout@v4 [cite: 1]
 
       - name: 2. إعداد البيئة
-        uses: actions/setup-java@v4
+        [cite_start]uses: actions/setup-java@v4 [cite: 1]
         with:
           java-version: '17'
-          [cite_start]distribution: 'temurin' [cite: 1]
+          distribution: 'temurin'
 
       - name: إعداد Node.js
-        uses: actions/setup-node@v4
+        [cite_start]uses: actions/setup-node@v4 [cite: 2]
         with:
-          [cite_start]node-version: '22' [cite: 2]
+          node-version: '22'
 
       - name: 3. التنظيف وعزل الكود
         run: |
@@ -54,7 +54,7 @@ jobs:
               </base-config>
           </network-security-config>' > android/app/src/main/res/xml/network_security_config.xml [cite: 6, 7]
 
-          # التعديل المحسن لمسارات الملفات لمعالجة مشكلة الصور
+          # تحديث مسارات الملفات لحل مشكلة فشل المعالجة
           echo '<?xml version="1.0" encoding="utf-8"?>
           <paths>
               <external-path name="my_images" path="Android/data/${{ github.event.repository.name }}/files/Pictures" />
@@ -64,16 +64,16 @@ jobs:
               <files-path name="files" path="." />
           </paths>' > android/app/src/main/res/xml/file_paths.xml
 
-          # إضافة الأذونات الأساسية والمتقدمة
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml [cite: 11]
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' android/app/src/main/AndroidManifest.xml [cite: 11]
+          # إضافة الأذونات المطلوبة [cite: 11, 12]
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.INTERNET" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.RECORD_AUDIO" />' android/app/src/main/AndroidManifest.xml
           sed -i '/<application/i \    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />' android/app/src/main/AndroidManifest.xml
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' android/app/src/main/AndroidManifest.xml [cite: 11]
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml [cite: 11]
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml [cite: 12]
-          [cite_start]sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />' android/app/src/main/AndroidManifest.xml [cite: 12]
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.CAMERA" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />' android/app/src/main/AndroidManifest.xml
+          sed -i '/<application/i \    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />' android/app/src/main/AndroidManifest.xml
 
-          # إضافة ميزات الكاميرا لضمان التوافق
+          # إضافة ميزات الكاميرا لضمان استقرار المعالجة
           sed -i '/<application/i \    <uses-feature android:name="android.hardware.camera" android:required="false" />' android/app/src/main/AndroidManifest.xml
           sed -i '/<application/i \    <uses-feature android:name="android.hardware.camera.autofocus" />' android/app/src/main/AndroidManifest.xml
 
@@ -109,10 +109,10 @@ jobs:
           [cite_start]cp "$AAB_FILE" Roqa-Final-Signed.aab [cite: 16]
 
       - name: 9. رفع النتائج
-        uses: actions/upload-artifact@v4
+        [cite_start]uses: actions/upload-artifact@v4 [cite: 17]
         with:
           name: Roqa-Full-Package-v${{ github.run_number }}
           path: |
-            Roqa-Final-Signed.apk [cite: 17]
-            Roqa-Final-Signed.aab [cite: 17]
+            Roqa-Final-Signed.apk
+            Roqa-Final-Signed.aab
             release_key.jks [cite: 17]
